--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,16 @@
 {
     "version": 2,
-    "routes":[
-        {
-            "src": "/(.*)",
-            "dest":"./src/index.js"
-        }
+    "builds": [
+      {
+        "src": "src/index.js",
+        "use": "@vercel/node"
+      }
+    ],
+    "routes": [
+      {
+        "src": "/(.*)",
+        "dest": "src/index.js"
+      }
     ]
-}
+  }
+  
