--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@sequelize/postgres": "^7.0.0-alpha.41",
     "@vercel/node": "^1.12.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
